Completion of "education" post

--- a/src/pages/posts/education.mdx
+++ b/src/pages/posts/education.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'Education (CPGE / ISIMA / OU) (WIP)'
+title: 'Education (CPGE / ISIMA / OU)'
 description: "My education path in the higher education system, from preparatory class through engineering school to Master's degree."
 image:
     path: null
@@ -14,22 +14,14 @@ duration: "5 years"
 link: null
 ---
 
-(Work in progress)
-
 My education and my perseverance to succeed has taken me to destinations I only dreamed of when I was younger. Since the first time I went to the USA, I've always wanted to come back for a longer period of time, and the partnership between my French engineering school and the University of Oklahoma made it possible. But to get to ISIMA, I had to go through the CPGE first, 2 years of hard work to prepare for competitive exams which allow students to attend the best engineering schools.
 
 
 ### CPGE
 
-After high school, I decided to go to a scientific CPGE (*Higher/Graduate school preparatory classes*) to later attend an engineering school in computer science. During 2 years, I learned how to work efficiently because the workload is very high. We have written exams each week, as well as 2 to 3 oral exams to verify the recent knowledge we saw in class during the last 2 weeks, in addition to many assignments to do everyday. Everything is done to train us for the competitive exams at the end of the 2 years that will rank us to see which school we sorted we can get into. 
+After high school, I decided to go to a scientific CPGE (*Higher/Graduate school preparatory class*) to later attend an engineering school in computer science. During 2 years, I learned how to work efficiently because the workload is very high. We have written exams each week, as well as 2 to 3 oral exams to verify the recent knowledge we saw in class during the last 2 weeks, in addition to many assignments to do everyday. Everything is done to train us for the competitive exams at the end of the 2 years that will rank us to see which school we sorted we can get into.
 
-The different courses I had during those years were:
-- French / Philosophy
-- English
-- Mathematics
-- Physics / Chemistry
-- Industrial sciences
-- Computer science (Python)
+The classes I had the most hours were in **Mathematics**, **Physics**, and **Industrial sciences**, but we were also trained in **Chemistry**, maths applied to **Computer Science** with Python, **English** and **French / Philosophy** so we wouldn't have only scientific knowledge but also a good thinking and communicating ability.
 
 On top of that, I also had to complete a project which would count in the exams. Every year there is a theme students have to comply as best as they can, during my year it was *"Societal issues: environment, safety, energy"*. I decided to analyze the optical sensor of a computer mouse because this is a tool widely used which efficiency can have a role in the health and perfomance of the user.
 
@@ -38,85 +30,45 @@ Even if it was a lot of pressure to attend the CPGE, the atmosphere between each
 
 ### ISIMA
 
-After my exams, I was admitted to ISIMA, an engineering school specialized in computer science. It is situated in Clermont-Ferrand, a city best known for its volcanoes and the Michelin headquarters. This school is part of the INP group, a network of engineering school which is also a sign of quality.
+After my exams, I was admitted to ISIMA (*Superior IT Institute, of Modelisation and their Applications*), an engineering school specialized in computer science. It is situated on the Cézeaux campus in Clermont-Ferrand, a city best known for its volcanoes and the Michelin headquarters. This school is part Clermont-Auvergne INP, a member of the INP group, a network of engineering school which is also a guarantee of quality.
 
 #### First year
 
-During the first year, I've learned some theoretical aspects of computer sciences, such as:
-- Automata theory and formal languages
-- Graph theory
+During the first year, I've learned some theoretical aspects of computer sciences, such as **Automata Theory and Formal Languages** and **Graph Theory**, but also some maths and applied maths with **Numerical Analysis**, **Probabilities**, **Differential Calculus**, **Linear Programming** and **Data Analysis**.
 
-I also did some maths and applied maths:
-- Numerical analysis
-- Probabilities
-- Differential calculus
-- Linear programming
-- Data analysis
+The goal of the engineering school is not only to give us the knowledge we'll need for our future works, but also to understand how everything works and why hardware and software are interconnected so we all have the understanding to work on different systems and create optimized solutions to problems. We then learn **Processor Physics**, **Data Transmission**, **Signal Processing**, **Digital System Design**, and **Control Engineering**.
 
-Engineering sciences:
-- Processor physics
-- Data transmission
-- Signal processing
-- Digital system design
-- Control engineering
+In computer science specifically, we learned imperative programming using **C**, functional programming using **Scheme**, **Unix** operating systems as well as **Algorithms and Data Structures**, **Databases**, and an overview of **Cybersecurity**.
 
-Computer science:
-- Imperative programming (C)
-- Functional programming (Scheme)
-- Operating systems (Unix)
-- Algorithms and data structures
-- Databases
-- Cybersecurity awareness
+In addition, every French engineering school need to provided classes of humanities and social sciences, that is why I did **Corporate Management**, **Expression and Communication** and took classes of **English** and **Mandarin Chinese**.
 
-In addition, every French engineering school need to provided classes of humanities and social sciences:
-- Languages (English, Mandarin Chinese)
-- Management engineering
-- Expression and communication
+At the end of the year, we completed a group project I present in another post: [Q-learning](./q_learning).
 
 #### Second year
 
-During the second year, I got more specialized in software engineering and information systems, but many classes I did in the first year were useful to understanding new courses, and there were still some general classes.
+During the second year, I got more specialized in **Software Engineering and Information Systems**, but many classes I did in the first year were useful to understanding new courses, and there were still some general classes in common with the other departments.
 
-{/* TIG project */}
+Among the new technical learnings, there was **Object-Oriented Programming** in **C++**, **Java** and **C#**, **Web Development** using **React**, the creation of **REST** **Web Services** in **C#/.NET** and how to design a system with **UML**.
 
-Computer science:
-- Object-oriented programming (C++, Java, C#)
-- Web development (React)
-- Web services (REST, C#/.NET)
-- UML
-- IoT
-- Networks
-- Security and system information
-- Modern architecture (Docker)
-- Software architecture and quality
-- Software forge (GitLab)
-- Simulation
-- Ergonomics of HMI
-- Database development (PLSQL)
-- Tools for logistics and transportation scheduling problems
+I also learned more about **IoT** devices, **Networks** and **Security and System Information**, but also about the **Docker** technology, **Software Architecture and Quality**, how to efficiently use a **Software Forge** through **GitLab**, **Simulation**, **Ergonomics of HMI**, **Database Development** in **PLSQL** and how to build **Tools for Logistics and Transportation Scheduling Problems**.
 
-Humanities and social sciences:
-- Languages (English, Mandarin Chinese)
-- Project management
-- Expression and communication
-- Management
+Regarding the humanities and social sciences, during the year I continued **English** and **Mandarin**, we still had a class of **Expression and Communication** and **Management**, but we also had a class of **Project Management**.
+
+During the year, I also had to do a project in group, I present it in another post: [TIG stack](./tig_stack/), and the end of the year ended with an internship I did at [Invivoo](./invivoo) in Paris.
 
 #### IsiLabs
 
-During my extra-curricular activities, I've also joined the IsiLabs club of the school as the communication manager. This is a club where computer enthusiasts meet to work on their personal projects, and share their knowledge with other students. Regularly, we would also organize events where someone would present a specific topic while remaining simple enough for everyone to understand. Other events include, Capture the Flag, code breaking, lock picking. My goal was to make sure every student of the school got the information of such events by sending emails and Discord messages, as well as introducing the club to new students and motivate as many people to come as possible. We would also participate in bigger school events organized by the BDE (*Student Union Office*).
+During my extra-curricular activities, I've also joined the IsiLabs club of the school as the **communication manager**. This is a club where computer enthusiasts meet to work on their personal projects, and share their knowledge with other students. Regularly, we would also organize events where someone would present a specific topic while remaining simple enough for everyone to understand, or one to help students install and use tools they might need to use to complete school assignments. Other events include, Capture the Flag, code breaking or even lock picking. We would also participate in bigger school events organized by the BDE (*Student Union Office*).
 
-{/* How well I completed my objective especially after club corridor closure */}
+My goal was to make sure every student of the school got the information of such events by sending emails and Discord messages, as well as introducing the club to new students and motivate as many interested people to come as possible.
+
+Shortly after I arrived at ISIMA, the corridor - where all clubs have a room to meet - has been closed soon after another Covid-19 outbreak hit. The first challenge my team and I faced when we took over was to find another place to meet, and my personal challenge was to make sure students would come back. As a result, I managed to convince more people than the previous year to come, and improved our Discord server so it would be used more often outside club hours.
 
 
 ### OU
 
-- Algorithm analysis
-- Computer architecture
-- Data networks
-- Blockchain and cryptocurrencies
-- PDN programming
-- Computer Security
-- Distributed operating systems
-- Computational learning theory
+Rather than doing my last year at ISIMA, a partnership with my school and the University of Oklahoma allowed me to fly to the USA to obtain a double degree.
 
-{/* MS Thesis */}
+The main difference with the university in the USA, is that I can choose my classes. I wanted to continue to learn more about software engineering but also some new technologies, so I took classes in **Algorithm Analysis**, **Computer Architecture** to learn about **assembly**, **Blockchain and Cryptocurrencies**, **PDN Programming**, **Distributed Operating Systems**, **Computer Security** as well as **Data Networks** and **Computational Learning Theory** to complete my coursework.
+
+I am doing the **Master's Thesis** program, and will update this post as soon as I finish it.
