Add card image to education post

--- a/src/pages/posts/education.mdx
+++ b/src/pages/posts/education.mdx
@@ -4,8 +4,8 @@ layout: ../../layouts/PostLayout.astro
 title: 'Education (CPGE / ISIMA / OU)'
 description: "My education path in the higher education system, from preparatory class through engineering school to Master's degree."
 image:
-    path: null
-    alt: null
+    path: "/src/assets/card/isima_ou.jpg"
+    alt: "Logos of ISIMA and OU"
 category: "experience"
 status: null
 from: 2019-09-02
