--- a/src/pages/posts/invivoo.mdx
+++ b/src/pages/posts/invivoo.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'INVIVOO Internship'
+title: "INVIVOO Internship (WIP)"
 description: "Matching project between CVs and call for tenders done for and at the company INVIVOO."
 image:
     path: "/src/assets/card/invivoo.png"
