--- a/src/pages/posts/logos.mdx
+++ b/src/pages/posts/logos.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'Logos'
+title: "Logos (WIP)"
 description: "Some logos I created when it was my hobby."
 image:
     path: null
@@ -18,4 +18,4 @@ link: null
 
 One of the first thing I did with a computer is drawing. When I learned about advanced tools, I started making logos for my own use for fun. I do not consider myself an artist, quite the contrary, but I like my ideas and what I have done with them. What follows are my attempts to do logos for different reasons.
 
-{ /* Add logos with context */ }
+{/* Add logos with context */}
