--- a/src/pages/posts/my_website_v4.mdx
+++ b/src/pages/posts/my_website_v4.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'My website v4'
+title: "My website v4"
 description: "Fourth version of my website in which I introduce myself and some things I worked on."
 image:
     path: "/src/assets/card/website_v4.png"
@@ -11,8 +11,9 @@ status: "completed"
 from: 2019-01-12
 to: 2019-04-27
 duration: "3 months"
-link: 'https://github.com/TristanB0/mywebsite_v4'
+link: "https://github.com/TristanB0/mywebsite_v4"
 ---
+
 import { Image } from "astro:assets";
 
 This is the fourth version of my website, which I designed entirely from scratch. There is an introduction of myself, logos I made and photographs I took throughout my trips. There is also a link to Electrogen', a tech news website where I was an editor.
@@ -26,9 +27,7 @@ import Screen_TristanB_en from "../../assets/my_website_v4/Screen_TristanB_en.pn
     <figcaption>Glimpse of what it looks like.</figcaption>
 </figure>
 
-
 It is also the first time I tried to make it responsive, so that the UI is adapted for tablet users and mobile users.
-
 
 import Screen_responsive from "../../assets/my_website_v4/Screen_responsive.png";
 
