--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'Langslater (Discord Bot)'
+title: "Langslater (Discord Bot)"
 description: "Discord Bot which translates messages which are not in the language selected by the servers' administrators."
 image:
     path: "/src/assets/card/langslater.png"
@@ -11,34 +11,30 @@ status: "maintenance"
 from: 2022-09-21
 to: 2023-07-23
 duration: "1 years"
-link: 'https://github.com/TristanB0/Langslater'
+link: "https://github.com/TristanB0/Langslater"
 ---
 
 This project has for goal to translate every messages which are not in the language selected by Discord server administrators.
 
-
-{ /* Reason to start the project */ }
+{/* Reason to start the project */}
 I started thinking about this bot when I started reading messages which were not in the languages I know and got tired of translating every messages by hand. A bot to automate translation would have allowed me to understand conversations quicker.
 
-
-{ /* Tools used */ }
+{/* Tools used */}
 I used **Python** as the programming language (with discord.py wrapper) and **SQL** to store the target language per server in a **SQLite** database.
 
-
-{ /* Explanation */ }
+{/* Explanation */}
 The bot uses slash commands to set it up.
 
 An admin must specify a translation language so that the bot can translate messages sent in another language to this specified one.
 
 Another functionality allows members to send a message in another language without it being translated.
 
+{/* List of commands */}
 
-{ /* List of commands */ }
 ### Commands
 
 - `/help` shows the help with every commands available
-- `/set_languages [string]` is used to define the target language, the one which will not be translated (*available only to administrator*)
+- `/set_languages [string]` is used to define the target language, the one which will not be translated (_available only to administrator_)
 - `/translate [string]` can be used to send a message in another language
-
 
 If the bot is removed from a server, all information regarding it stored in the database is deleted.
