--- a/src/pages/posts/my_website_v5.mdx
+++ b/src/pages/posts/my_website_v5.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'My website v5'
+title: "My website v5 (WIP)"
 description: "The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years as well as some professional experiences."
 image:
     path: "/src/assets/card/website_v5.png"
@@ -11,7 +11,7 @@ status: "in-progress"
 from: 2022-02-02
 to: null
 duration: null
-link: 'https://github.com/TristanB0/my_website_v5'
+link: "https://github.com/TristanB0/my_website_v5"
 ---
 
 (Work in progress)
