--- a/src/pages/posts/q_learning.mdx
+++ b/src/pages/posts/q_learning.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'Q-learning'
+title: "Q-learning"
 description: "Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
 image:
     path: "/src/assets/card/q_learning.png"
@@ -13,10 +13,10 @@ to: 2022-07-01
 duration: "2 weeks"
 link: null
 ---
+
 import { Image } from "astro:assets";
 
 This is the project we had to do at the end of our first year of engineering school in teams of 3. The goal was to build a game using the C language and SDL2 and then build a Q-learning algorithm (here: double-Q-learning) to learn solving the game.
-
 
 import ia_learning from "../../assets/q_learning/ia_learning.gif";
 
@@ -28,9 +28,7 @@ import ia_learning from "../../assets/q_learning/ia_learning.gif";
     <figcaption>The IA at its first stages of learning.</figcaption>
 </figure>
 
-
 Our game is a maze with multiple paths, devided in two parts, to get to the exit, but there is a passage at the center which is mandatory to get to the second part of the game. There are also ennemies located in mutiples dead ends and crossing their line of sight is a game over.
-
 
 import ia_not_optimal_path from "../../assets/q_learning/ia_not_optimal_path.gif";
 
@@ -39,9 +37,7 @@ import ia_not_optimal_path from "../../assets/q_learning/ia_not_optimal_path.gif
     <figcaption>The IA finds the exit but not via the optimal way.</figcaption>
 </figure>
 
-
 One of the challenge is to find the correct balance of settings for it to learn efficiently. An other challenge is to chose the right perceptions of the IA. In our case, we decided it could see 4 cases around it <code>(UP, RIGHT, DOWN, LEFT)</code> and that he could not go back except in case of a dead end.
-
 
 import ia_best_path from "../../assets/q_learning/ia_best_path.gif";
 
@@ -50,9 +46,7 @@ import ia_best_path from "../../assets/q_learning/ia_best_path.gif";
     <figcaption>The IA after it learned during enough time.</figcaption>
 </figure>
 
-
 We also added a gamemode where the player could solve the maze by himself and we integrated the whole through a menu.
-
 
 import player_mode from "../../assets/q_learning/player_mode.png";
 
