--- a/src/pages/posts/tig_stack.mdx
+++ b/src/pages/posts/tig_stack.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 
-title: 'TIG Stack'
+title: "TIG Stack (WIP)"
 description: "Stack to monitor data from Clermont-Auvergne INP classrooms"
 image:
     path: null
