Updated heading sizes

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -31,7 +31,7 @@ Moreover, when a new user joins a server with Anniminder in it, he receives a pr
 
 {/* List of commands */}
 
-### Commands
+## Commands
 
 - `/help` shows the help command with every information
 - `/set_channel [channel]` is used to define a specific channel to send birthday messages in (_available only to administrator_)
@@ -41,6 +41,6 @@ Moreover, when a new user joins a server with Anniminder in it, he receives a pr
 
 Finally, when a bot is deleted from a server or when a user leaves a server, every information related to them is removed.
 
-### Planned functionalities
+## Planned functionalities
 
 Before discontinuing the bot, I planned to make the bot being able to remember any events the users want, and remind about it ther same way as birthdays. Moreover, I wanted to add the possibility to planned a weekly or monthly message using Open AI API to summarize everything, but also to create a website to facilitate the addition of dates and administration of the settings of the bot.
