--- a/src/pages/posts/education.mdx
+++ b/src/pages/posts/education.mdx
@@ -16,7 +16,7 @@ link: null
 
 My education and my perseverance to succeed has taken me to destinations I only dreamed of when I was younger. Since the first time I went to the USA, I've always wanted to come back for a longer period of time, and the partnership between my French engineering school and the University of Oklahoma made it possible. But to get to ISIMA, I had to go through the CPGE first, 2 years of hard work to prepare for competitive exams which allow students to attend the best engineering schools.
 
-### CPGE
+## CPGE
 
 After high school, I decided to go to a scientific CPGE (_Higher/Graduate school preparatory class_) to later attend an engineering school in computer science. During 2 years, I learned how to work efficiently because the workload is very high. We have written exams each week, as well as 2 to 3 oral exams to verify the recent knowledge we saw in class during the last 2 weeks, in addition to many assignments to do everyday. Everything is done to train us for the competitive exams at the end of the 2 years that will rank us to see which school we sorted we can get into.
 
@@ -26,11 +26,11 @@ On top of that, I also had to complete a project which would count in the exams.
 
 Even if it was a lot of pressure to attend the CPGE, the atmosphere between each student was very friendly and we helped each other a lot, which makes the experience very interesting and rewarding.
 
-### ISIMA
+## ISIMA
 
 After my exams, I was admitted to ISIMA (_Superior IT Institute, of Modelisation and their Applications_), an engineering school specialized in computer science. It is situated on the Cézeaux campus in Clermont-Ferrand, a city best known for its volcanoes and the Michelin headquarters. This school is part Clermont-Auvergne INP, a member of the INP group, a network of engineering school which is also a guarantee of quality.
 
-#### First year
+### First year
 
 During the first year, I've learned some theoretical aspects of computer sciences, such as **Automata Theory and Formal Languages** and **Graph Theory**, but also some maths and applied maths with **Numerical Analysis**, **Probabilities**, **Differential Calculus**, **Linear Programming** and **Data Analysis**.
 
@@ -42,7 +42,7 @@ In addition, every French engineering school need to provided classes of humanit
 
 At the end of the year, we completed a group project I present in another post: [Q-learning](./q_learning).
 
-#### Second year
+### Second year
 
 During the second year, I got more specialized in **Software Engineering and Information Systems**, but many classes I did in the first year were useful to understanding new courses, and there were still some general classes in common with the other departments.
 
@@ -54,7 +54,7 @@ Regarding the humanities and social sciences, during the year I continued **Engl
 
 During the year, I also had to do a project in group, I present it in another post: [TIG stack](./tig_stack/), and the end of the year ended with an internship I did at [Invivoo](./invivoo) in Paris.
 
-#### IsiLabs
+### IsiLabs
 
 During my extra-curricular activities, I've also joined the IsiLabs club of the school as the **communication manager**. This is a club where computer enthusiasts meet to work on their personal projects, and share their knowledge with other students. Regularly, we would also organize events where someone would present a specific topic while remaining simple enough for everyone to understand, or one to help students install and use tools they might need to use to complete school assignments. Other events include, Capture the Flag, code breaking or even lock picking. We would also participate in bigger school events organized by the BDE (_Student Union Office_).
 
@@ -62,7 +62,7 @@ My goal was to make sure every student of the school got the information of such
 
 Shortly after I arrived at ISIMA, the corridor - where all clubs have a room to meet - has been closed soon after another Covid-19 outbreak hit. The first challenge my team and I faced when we took over was to find another place to meet, and my personal challenge was to make sure students would come back. As a result, I managed to convince more people than the previous year to come, and improved our Discord server so it would be used more often outside club hours.
 
-### OU
+## OU
 
 Rather than doing my last year at ISIMA, a partnership with my school and the University of Oklahoma allowed me to fly to the USA to obtain a double degree.
 
