--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -31,7 +31,7 @@ Another functionality allows members to send a message in another language witho
 
 {/* List of commands */}
 
-### Commands
+## Commands
 
 - `/help` shows the help with every commands available
 - `/set_languages [string]` is used to define the target language, the one which will not be translated (_available only to administrator_)
