--- a/src/pages/posts/education.mdx
+++ b/src/pages/posts/education.mdx
@@ -40,7 +40,7 @@ In computer science specifically, we learned imperative programming using **C**,
 
 In addition, every French engineering school need to provided classes of humanities and social sciences, that is why I did **Corporate Management**, **Expression and Communication** and took classes of **English** and **Mandarin Chinese**.
 
-At the end of the year, we completed a group project I present in another post: [Q-learning](./q_learning).
+At the end of the year, we completed a group project I present in another post: [Q-learning](./q-learning).
 
 ### Second year
 
@@ -52,7 +52,7 @@ I also learned more about **IoT** devices, **Networks** and **Security and Syste
 
 Regarding the humanities and social sciences, during the year I continued **English** and **Mandarin**, we still had a class of **Expression and Communication** and **Management**, but we also had a class of **Project Management**.
 
-During the year, I also had to do a project in group, I present it in another post: [TIG stack](./tig_stack/), and the end of the year ended with an internship I did at [Invivoo](./invivoo) in Paris.
+During the year, I also had to do a project in group, I present it in another post: [TIG stack](./tig-stack/), and the end of the year ended with an internship I did at [Invivoo](./invivoo) in Paris.
 
 ### IsiLabs
 
