Added Codeberg link to project page

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -11,7 +11,7 @@ status: "discontinued"
 from: 2022-07-01
 to: 2023-07-23
 duration: "1 year"
-link: "https://github.com/TristanB0/Anniminder"
+link: "Anniminder"
 ---
 
 This project is a reminder of birthdays for Discord servers.
