--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -11,7 +11,7 @@ status: "maintenance"
 from: 2022-09-21
 to: 2023-07-23
 duration: "1 years"
-link: "https://github.com/TristanB0/Langslater"
+link: "Langslater"
 ---
 
 This project has for goal to translate every messages which are not in the language selected by Discord server administrators.
