--- a/src/pages/posts/my-website-v4.mdx
+++ b/src/pages/posts/my-website-v4.mdx
@@ -11,7 +11,7 @@ status: "completed"
 from: 2019-01-12
 to: 2019-04-27
 duration: "3 months"
-link: "https://github.com/TristanB0/mywebsite_v4"
+link: "my_website_v4"
 ---
 
 import { Image } from "astro:assets";
