--- a/src/pages/posts/my-website-v5.mdx
+++ b/src/pages/posts/my-website-v5.mdx
@@ -11,7 +11,7 @@ status: "in-progress"
 from: 2022-02-02
 to: null
 duration: null
-link: "https://github.com/TristanB0/my_website_v5"
+link: "my_website_v5"
 ---
 
 (Work in progress)
