Add "on hold" status for projects

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -7,7 +7,7 @@ image:
     path: "/src/assets/card/anniminder.png"
     alt: "Logo du bot"
 category: "achievement"
-status: "discontinued"
+status: "hold"
 from: 2022-07-01
 to: 2023-07-23
 duration: "1 year"
