Update to raspberry-pi page 2

--- a/src/pages/posts/raspberry-pi.mdx
+++ b/src/pages/posts/raspberry-pi.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 
 title: "Raspberry Pi / VPS Projects"
-description: "Multiples projects realized with a Raspberry Pi."
+description: "Multiples projects realized with a Raspberry Pi / VPS."
 image:
     path: "/src/assets/card/raspberry_pi_logo.png"
     alt: "Logo of Raspberry Pi"
