Update invivoo page

--- a/src/pages/posts/invivoo.mdx
+++ b/src/pages/posts/invivoo.mdx
@@ -15,3 +15,9 @@ link: null
 ---
 
 (Work in progress)
+
+As part of the education I received at ISIMA, I had to do an internship at the end of my second year. I went to **INVIVOO** situated in La Défense, an IT consulting company which has also created softwares for monitoring services, creating workflows and others.
+
+My job was to start a project to match CVs with call for tenders to have the best candidates to be sent on a mission.
+
+To realize this, I have been using **C#** to create APIs published on **Azure Functions** and stored all necessary information in a **Cosmos DB** database. To help with the matching, I have used the **OpenAI** API to create embeddings of some information from the CVs but also tried a more precise comparison focusing on skills and keywords.
