Update link to MC project

--- a/src/pages/posts/raspberry-pi.mdx
+++ b/src/pages/posts/raspberry-pi.mdx
@@ -32,7 +32,7 @@ It is easy to run Python on GNU/Linux, so here it belongs. I just had to make su
 
 ## Host a Minecraft server
 
-This is just a simple Minecraft server running Paper where I can meet with my friends and create structures of our choices. For now, we have been working on recreating our former school where we met. You can follow the progress of the building at the address http://mc.tristanbony.me:8100 thanks to the plugin BlueMap.
+This is just a simple Minecraft server running Paper where I can meet with my friends and create structures of our choices. For now, we have been working on recreating our former school where we met. You can follow the progress of the building at the address https://mc.tristanbony.me thanks to the plugin BlueMap.
 
 import Minecraft_render from "../../assets/raspberry_pi/Minecraft_render.png";
 
