Mostly code formatting and update outdated info

--- a/src/pages/posts/raspberry-pi.mdx
+++ b/src/pages/posts/raspberry-pi.mdx
@@ -4,8 +4,8 @@ layout: ../../layouts/PostLayout.astro
 title: "Raspberry Pi / VPS Projects"
 description: "Multiples projects realized with a Raspberry Pi / VPS."
 image:
-    path: "/src/assets/card/raspberry_pi_logo.png"
-    alt: "Logo of Raspberry Pi"
+  path: "/src/assets/card/raspberry_pi_logo.png"
+  alt: "Logo of Raspberry Pi"
 category: "achievement"
 status: null
 from: null
@@ -37,6 +37,8 @@ This is just a simple Minecraft server running Paper where I can meet with my fr
 import Minecraft_render from "../../assets/raspberry_pi/Minecraft_render.png";
 
 <figure>
-    <Image src={Minecraft_render} alt="Minecraft render of our former school" />
-    <figcaption>Minecraft render of our former school with Overviewer in construction.</figcaption>
+  <Image src={Minecraft_render} alt="Minecraft render of our former school" />
+  <figcaption>
+    Minecraft render of our former school with Overviewer in construction.
+  </figcaption>
 </figure>
