--- a/src/pages/posts/education.mdx
+++ b/src/pages/posts/education.mdx
@@ -2,10 +2,10 @@
 layout: ../../layouts/PostLayout.astro
 
 title: "Education (CPGE / ISIMA / OU)"
-description: "My education path in the higher education system, from preparatory class through engineering school to Master's degree."
+description: "My education path in the higher education system, from preparatory class through engineering school to international Master's degree."
 image:
-    path: "/src/assets/card/isima_ou.jpg"
-    alt: "Logos of ISIMA and OU"
+  path: "/src/assets/card/isima_ou.jpg"
+  alt: "Logos of ISIMA and OU"
 category: "experience"
 status: null
 from: 2019-09-02
