Add tools info to article's sidebar

--- a/src/pages/posts/anniminder.mdx
+++ b/src/pages/posts/anniminder.mdx
@@ -12,6 +12,7 @@ from: 2022-07-01
 to: 2023-07-23
 duration: "1 year"
 link: "Anniminder"
+tools: ["Python", "SQL", "SQLite"]
 ---
 
 This project is a reminder of birthdays for Discord servers.
