--- a/src/pages/posts/education.mdx
+++ b/src/pages/posts/education.mdx
@@ -12,6 +12,7 @@ from: 2019-09-02
 to: 2024-12-13
 duration: "5 years"
 link: null
+tools: null
 ---
 
 My education and my perseverance to succeed has taken me to destinations I only dreamed of when I was younger. Since the first time I went to the USA, I've always wanted to come back for a longer period of time, and the partnership between my French engineering school and the University of Oklahoma made it possible. But to get to ISIMA, I had to go through the CPGE first, 2 years of hard work to prepare for competitive exams which allow students to attend the best engineering schools.
