--- a/src/pages/posts/invivoo.mdx
+++ b/src/pages/posts/invivoo.mdx
@@ -12,6 +12,7 @@ from: 2023-04-03
 to: 2023-08-28
 duration: "4 months"
 link: null
+tools: ["C#/.NET", "Azure Functions", "Azure Cosmos DB", "OpenAI"]
 ---
 
 (Work in progress)
