--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -12,6 +12,7 @@ from: 2022-09-21
 to: 2023-07-23
 duration: "1 years"
 link: "Langslater"
+tools: ["Python", "SQL", "SQLite"]
 ---
 
 This project has for goal to translate every messages which are not in the language selected by Discord server administrators.
