--- a/src/pages/posts/my-website-v4.mdx
+++ b/src/pages/posts/my-website-v4.mdx
@@ -12,11 +12,12 @@ from: 2019-01-12
 to: 2019-04-27
 duration: "3 months"
 link: "my_website_v4"
+tools: ["HTML", "CSS"]
 ---
 
 import { Image } from "astro:assets";
 
-This is the fourth version of my website, which I designed entirely from scratch. There is an introduction of myself, logos I made and photographs I took throughout my trips. There is also a link to Electrogen', a tech news website where I was an editor.
+This is the fourth version of my website, which I designed entirely from scratch using only HTML and CSS. There is an introduction of myself, logos I made and photographs I took throughout my trips. There is also a link to Electrogen', a tech news website where I was an editor.
 
 Everything is made so it would fit on a single page.
 
