--- a/src/pages/posts/my-website-v5.mdx
+++ b/src/pages/posts/my-website-v5.mdx
@@ -12,6 +12,7 @@ from: 2022-02-02
 to: null
 duration: null
 link: "my_website_v5"
+tools: ["Astro", "TypeScript", "Tailwind CSS", "MDX"]
 ---
 
 (Work in progress)
