--- a/src/pages/posts/q-learning.mdx
+++ b/src/pages/posts/q-learning.mdx
@@ -12,6 +12,7 @@ from: 2022-06-20
 to: 2022-07-01
 duration: "2 weeks"
 link: null
+tools: ["C", "SDL2", "Q-learning"]
 ---
 
 import { Image } from "astro:assets";
