--- a/src/pages/posts/tig-stack.mdx
+++ b/src/pages/posts/tig-stack.mdx
@@ -12,6 +12,7 @@ from: 2022-12-12
 to: 2023-03-31
 duration: "5 months"
 link: null
+tools: ["Docker", "Telegraf", "InfluxDB", "Grafana"]
 ---
 
 (Work in progress)
