Improve content (alt text, new cv, mistake in presentation)

--- a/src/pages/posts/education.mdx
+++ b/src/pages/posts/education.mdx
@@ -5,7 +5,7 @@ title: "Education (CPGE / ISIMA / OU)"
 description: "My education path in the higher education system, from preparatory class through engineering school to international Master's degree."
 image:
   path: "/src/assets/card/isima_ou.jpg"
-  alt: "Logos of ISIMA and OU"
+  alt: "Clermont Auvergne INP UCA ISIMA and OU graphic representation"
 category: "experience"
 status: null
 from: 2019-09-02
