--- a/src/pages/posts/langslater.mdx
+++ b/src/pages/posts/langslater.mdx
@@ -5,7 +5,7 @@ title: "Langslater (Discord Bot)"
 description: "Discord Bot which translates messages which are not in the language selected by the servers' administrators."
 image:
   path: "/src/assets/card/langslater.png"
-  alt: "Logo du bot"
+  alt: "Icon with a latin character and a chinese character in chat bubbles"
 category: "achievement"
 status: "maintenance"
 from: 2022-09-21
