--- a/src/pages/posts/my-website-v5.mdx
+++ b/src/pages/posts/my-website-v5.mdx
@@ -5,7 +5,7 @@ title: "My website v5 (WIP)"
 description: "The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years as well as some professional experiences."
 image:
   path: "/src/assets/card/website_v5.png"
-  alt: "Screenshot of my website on v5"
+  alt: "Screenshot of my website on v5 with a white theme"
 category: "achievement"
 status: "in-progress"
 from: 2022-02-02
