--- a/src/pages/posts/raspberry-pi.mdx
+++ b/src/pages/posts/raspberry-pi.mdx
@@ -5,7 +5,7 @@ title: "Raspberry Pi / VPS Projects"
 description: "Multiples projects realized with a Raspberry Pi / VPS."
 image:
   path: "/src/assets/card/raspberry_pi_logo.png"
-  alt: "Logo of Raspberry Pi"
+  alt: "Raspberry Pi brand illustration"
 category: "achievement"
 status: null
 from: null
