--- a/src/pages/posts/q-learning.mdx
+++ b/src/pages/posts/q-learning.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 
 title: "Q-learning"
-description: "Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
+description: "Making of a game and an AI using the C language and SDL2 to find the exit of a maze via the quickest path."
 image:
   path: "/src/assets/card/q_learning.png"
   alt: "Screenshot of the game in player mode"
