--- a/src/pages/posts/raspberry-pi.mdx
+++ b/src/pages/posts/raspberry-pi.mdx
@@ -39,7 +39,5 @@ import Minecraft_render from "../../assets/raspberry_pi/Minecraft_render.png";
 
 <figure>
   <Image src={Minecraft_render} alt="Minecraft render of our former school" />
-  <figcaption>
-    Minecraft render of our former school with Overviewer in construction.
-  </figcaption>
+  <figcaption>Minecraft render of our former school with Overviewer in construction.</figcaption>
 </figure>
